# rust-frontend

./: Cargo.toml  index.html  tailwind.css
public/: tailwind.css
src/: main.rs  routes.rs
src/components/: navbar.rs
src/models/: login.rs  register.rs
src/pages/: forgot_password.rs  home.rs  login.rs  mod.rs  register.rs
