[package]
name = "rust_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.37"
dotenv = "0.15.0"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
reqwest = { version = "0.11.18", features = ["json"] }
gloo-storage = "0.2.2"
gloo = "0.9.0"
validator = { version = "0.16.1", features = ["derive"] }

wasm-logger = "0.2.0"
log = "0.4.6"